RESOLVED FIXED40772
Warnings in v8 bindings with possible bug
https://bugs.webkit.org/show_bug.cgi?id=40772
Summary Warnings in v8 bindings with possible bug
Thomas Van Lenten
Reported 2010-06-17 05:37:24 PDT
We're trying to turn on -Wextra in for Chromium on the Mac. All the core Chromium code is now clean, so we're down to a half dozen hits in WebKit and v8. The v8 hits are (paths are from chromium build): src/third_party/WebKit/WebCore/WebCore.gyp/../bindings/v8/custom/V8SQLResultSetRowListCustom.cpp: In static member function 'static v8::Handle<v8::Value> WebCore::V8SQLResultSetRowList::itemCallback(const v8::Arguments&)': src/third_party/WebKit/WebCore/WebCore.gyp/../bindings/v8/custom/V8SQLResultSetRowListCustom.cpp:59: warning: comparison of unsigned expression < 0 is always false Is putting a signed value into an unsigned and then checking for < 0. Dropping the check would fix the warning, but the sign drop could be an real issue. src/third_party/WebKit/WebCore/WebCore.gyp/../bindings/v8/npruntime.cpp: In function 'void _NPN_DeallocateObject(NPObject*)': src/third_party/WebKit/WebCore/WebCore.gyp/../bindings/v8/npruntime.cpp:299: warning: comparison of unsigned expression >= 0 is always true This is an assert for npObject->referenceCount being >= 0, but since referenceCount appears to be an uint32, the assert can probably just be dropped.
Attachments
patch (1.91 KB, patch)
2010-06-18 01:15 PDT, Dumitru Daniliuc
dglazkov: review+
dumi: commit-queue-
Dimitri Glazkov (Google)
Comment 1 2010-06-17 07:28:22 PDT
Dumi, could you take a look at the first one? Yup, the second one we can just drop.
Dumitru Daniliuc
Comment 2 2010-06-18 01:15:06 PDT
Dimitri Glazkov (Google)
Comment 3 2010-06-18 07:40:12 PDT
Comment on attachment 59078 [details] patch ok.
Dumitru Daniliuc
Comment 4 2010-06-18 09:47:37 PDT
Landed as r61412.
Note You need to log in before you can comment on or make changes to this bug.