Remove some unnecessary checks that cause compiler warnings. https://bugs.webkit.org/show_bug.cgi?id=40772

Reviewed by Dimitri Glazkov.

* bindings/v8/custom/V8SQLResultSetRowListCustom.cpp:
(WebCore::V8SQLResultSetRowList::itemCallback):
* bindings/v8/npruntime.cpp:



Canonical link: https://commits.webkit.org/52422@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61412 268f45cc-cd09-0410-ab3c-d52691b4dbfc